<resources>
    <string name="app_name">ITU Hermes</string>
    <!-- Strings related to login -->
    <string name="password_prompt">Password</string>
    <string name="email_prompt">Email</string>
    <string name="action_login">Login</string>
    <string name="action_signup">Sign up</string>
    <string name="error_invalid_email">Invalid email address!</string>
    <string name="error_invalid_password">8–20 characters. (@$!%*#?&amp;)</string>
    <string name="error_incorrect_password">Incorrect password!</string>
    <string name="error_field_required">This field is required!</string>
    <string name="error_database">Database error!</string>
    <string name="error_no_user">User does not exist!</string>
    <string name="unidentified_error">Something went wrong!</string>
    <string name="login_success">Logged in successfully!</string>
    <string name="passval_prompt">Re-enter password</string>
    <string name="signup_lastname">Lastname</string>
    <string name="signup_name">Name</string>
    <string name="signup_success">Signed up successfully!</string>
    <string name="error_user_already_defined">User already exists!</string>
    <string name="error_invalid_chars">Invalid characters!</string>
    <string name="error_password_mismatch">Passwords do not match!</string>
    <string name="available_tags">Available tags</string>
    <string name="add">Add</string>
    <string name="followed_tags">Currently followed tags</string>
    <string name="delete">Delete</string>
    <string name="profile">Profile</string>
    <string name="enter_post">Enter post</string>
    <string name="post_success">Post is sent successfully!</string>
    <string name="post_fail">Cannot send post.</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="new_post">New Post</string>
    <string name="subscription">Subscription</string>
    <string name="notsubscribing">Not subscribing</string>
    <string name="subscribing">Subscribing</string>
    <string name="title">Title</string>
    <string name="add_topic">Add Topic</string>
    <string name="OK">OK</string>
    <string name="wait_prompt">Please wait…</string>
    <string name="posts">Posts</string>
    <string name="recommendations">Recommendations</string>
    <string name="notification_title">ITU Hermes</string>
    <string name="notification_text">You have new notifications!</string>
    <string name="notification_title_text">Notifications</string>
    <string name="posted">posted:</string>
    <string name="go_to_topic">Go to topic</string>
    <string name="tag">TAG</string>
    <string name="titleCaps">TITLE</string>
    <string name="message">Message</string>
    <string name="you_don_t_have_any_new_recommendations">You don\'t have any new recommendations</string>
    <string name="you_don_t_have_any_new_posts">You don\'t have any new posts</string>
    <string name="edit_post">Edit Post</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="search_count_warning">You should enter at least 3 characters.</string>
    <string name="log_off">Log off</string>
    <string name="log_off_prompt">Do you want to log off?</string>
</resources>
